# Dioscuri

./: Cargo.toml  LICENSE  readme.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: browser.rs  cert.rs  gemini.rs  gemtext.rs  main.rs  tofu.rs  utils.rs
template/: body.html  head.html  nav.html
themes/modern/: addressbar.js  body.html  head.html  home.html  style.css
themes/newspaper/: body.html  head.html  home.html  style.css
themes/nyan/: body.html  head.html  home.html  style.css
