[package]
name = "dioscuri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.4"
dirs = "6.0.0"
hyper = "1.6.0"
markdown = "1.0.0"
native-tls = "0.2.14"
tokio = {version = "1.46.0", features = ["full"]}
tower = "0.5.2"
url = "2.5.4"
x509-parser = "0.17.0"
